# Payment_App

./: .gitignore  README.md  build-and-install.bat  build-and-install.ps1  build-and-install.sh  entry_point.py  install.bat  install.ps1  install.sh  package-lock.json  package.json  requirements.txt
.github/workflows/: build.yml
data/: config.json  history.db
scripts/: install-deps.ps1
src/: App.css  App.tsx  app.py  supabase.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: calc.rs  config.rs  excel.rs  history.rs  importer.rs  lib.rs  main.rs  models.rs
