[package]
name = "cscec-payment"
version = "0.1.0"
description = "CSCEC Payment Voucher — Settlement Calculation App"
authors = ["you"]
edition = "2021"

[lib]
name = "cscec_payment_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
rust_xlsxwriter = "0.82"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
